test/types/sync/ferguson/sync-string.good
sync-string.chpl:1: error: sync/single types cannot contain type 'string'
