test/types/sync/ferguson/sync-string.chpl
var x: sync string;
x.writeEF("hello");
